# grpc_server

./: README.md  pyproject.toml
app/: main.py
app/service/photocatalog/: mock_repository.py  protocol.py  service.py
internal/pb/: photocatalog_pb2.py  photocatalog_pb2.pyi.py  photocatalog_pb2_grpc.py
protos/: photocatalog.proto
